- Map display updates fixed for Java versions > 8.