@@ -34,6 +34,8 @@ import aima.gui.fx.framework.IntegratedAppBuilder;
 import javafx.application.Application;
 import javafx.stage.Stage;
 
+// VM options (Java>8): --module-path ${PATH_TO_FX} --add-modules javafx.controls,javafx.fxml
+
 /**
  * Integrated application which provides access to all JavaFX applications
  * (...App) and command line demos (...Demo) which are currently available in
